feat: refatorando classe de pecas e insumos, usuarios e acompanhamento